--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@comunica/query-sparql": "^2.7.1",
+    "@comunica/query-sparql-solid": "^2.4.0",
     "@inrupt/solid-client": "^1.29.0",
     "@inrupt/solid-client-authn-browser": "^1.16.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -12,7 +14,6 @@
     "rdf-namespaces": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-json-view": "^1.21.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
